# MED_IO_Schedule

./: .gdbinit  .gitignore  CMakeLists.txt  main.c  public.h  作品名称.txt  编译运行说明.md
algorithm/: LKH.c  LKH.h  LKH0.c  LKH0.h  LKH1.c  LKH1.h  LKH_embeded.c  LKH_embeded.h  LNS.c  LNS.h  LNS1.c  LNS1.h  algorithm.c  algorithm.h  base.c  base.h  base_SCAN.c  base_SCAN.h  dp.c  dp.h  greedy.c  greedy.cpp  greedy.h  greedy1.c  greedy1.h
dataset/: case_10.txt  case_6.txt  case_7.txt  case_8.txt  case_test_0.txt  case_test_1.txt  case_test_2.txt  case_test_3.txt  case_test_4.txt  case_test_5.txt  case_test_6.txt  case_test_8.txt  dataset_gen.py
docs/: note.md  result.txt  score_result.txt  score_result1.txt  作品原创性声明.docx  华科全国存储算法大赛-磁电盘IO最优调度-2024-8-9.docx  挑战赛道作品设计文档.docx
docs/result/pics/: result_20241018_034431.png.pickle  result_20241018_035205.png.pickle  result_20241018_040124.png.pickle  result_20241018_040503.png.pickle  result_20241018_041220.png.pickle  result_20241018_041439.png.pickle  result_20241018_042059.png.pickle  result_20241018_043002.png.pickle  result_20241018_093714.png.pickle  result_20241018_094405.png.pickle  result_20241018_100233.png.pickle  result_20241018_111721.png.pickle
docs/result/scores/: result_10-1000-20_SCAN_Greedy_LNS_LKH_embeded_Combined.txt  result_10-1000-5_SCAN_Greedy_LNS_LKH_embeded_Combined.txt  result_1000-2000-100_2000-5000-500_5000-10001-1000_SCAN_Greedy_LNS_LKH_embeded_Combined.txt
lib/: libseek_model_wrapper.py  read_pickle.py  scoreSystem.py  score_system.py  test.py
lib/LKH/: .gitignore  LKH  io.atsp  io.par
lib/LKH/SRC/: ChooseInitialTour.c  LinKernighan.c  ReadProblem.c  WriteTour.c  dir.txt  printff.c
lib/scikit-opt/: atsp2tsp.py  gen_init_tour.py  path_plot.py  read_lkh_result.py  read_result.py  requirements.txt  scikit-opt-io-sln.py  scikit-opt-otsp-sln.py  scikit-opt-sln.py  tsp_parser.py
visualizer/: .gitignore  dataset_parser.py  generate_tracing_json.py  tracing.html  visualizer.py  webui.py
